--- a/views/login.html
+++ b/views/login.html
@@ -22,7 +22,7 @@
                             <span class="input-group-text" id="basic-addon1">@</span>
                             <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
                         </div>
-                        <button type="button" id="ingresoGmail" class="btn btn-outline-primary w-100"><i class="bi bi-google"></i> Ingreso de Gmail</button>
+                        <button type="button" id="ingresoGmail" class="btn btn-outline-primary w-100"><i class="bi bi-google"></i> Gmail</button>
                     </form>
                 </div>
             </div>
@@ -30,5 +30,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="../src/controllers/controladorlogin.js" type="module"></script>
 </body>
 </html>
