--- a/assets/styles/estilos.css
+++ b/assets/styles/estilos.css
@@ -7,8 +7,7 @@
     background-position: top center;
     background-size:cover;
     background-attachment: fixed;
-    padding: 25%;
-
+    padding: 7%;
 }
 
 .botonChat{
@@ -29,6 +28,22 @@
     border-radius: 10px;
     z-index: 1;
 }
+
+.mensajeChat{
+    overflow-y: auto;
+    height: 80%;
+    padding-bottom: 20px;
+}
+
+.areatextoChat{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    padding: 10px;
+}
+ .botonSend{
+    cursor:pointer
+ }
 
 .textoChat{
     position: absolute;
